# Offline-RAG-Benchmark-Runner

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  run.cmd
.github/workflows/: ci.yml
configs/: bench.yaml
data/: queries.sample.jsonl
data/mock_indices/lochugflarge2_index_tossqa/: docs.jsonl
data/mock_indices/lochugflarge_index_normalqa/: docs.jsonl
data/mock_indices/lochugflarge_index_skylifeqa/: docs.jsonl
src/obrbr/: __main__.py  cli.py  config.py  embedder.py  logging_utils.py  metrics.py  reporting.py  runner.py
src/obrbr/search/: __init__.py  backend_base.py  es_backend.py  mock_backend.py
templates/: report_template.md
tests/: test_metrics.py  test_mock_backend.py  test_reporting.py
